nav position sticky

--- a/contact.html
+++ b/contact.html
@@ -2,7 +2,7 @@
 <html lang="en">
 
 <head>
-	<title>Chiropractic - Free Bootstrap 4 Template by Colorlib</title>
+	<title>Contact</title>
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
@@ -28,7 +28,7 @@
 		<div class="container">
 			<div class="row justify-content-between">
 				<div class="col-md-3 mb-md-0 mb-4 d-flex align-items-center">
-					<a class="navbar-brand" href="index.html">Chiropractic</a>
+					<a class="navbar-brand" href="index.html">Smart Care</a>
 				</div>
 				<div class="col-md-7">
 					<div class="row">
@@ -52,17 +52,18 @@
 			</div>
 		</div>
 	</div>
-	<nav class="navbar navbar-expand-lg navbar-dark ftco_navbar bg-dark ftco-navbar-light" id="ftco-navbar">
+	<nav class="navbar position-sticky navbar-expand-lg navbar-dark ftco_navbar bg-dark ftco-navbar-light"
+		id="ftco-navbar">
 		<div class="container">
 			<button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#ftco-nav"
 				aria-controls="ftco-nav" aria-expanded="false" aria-label="Toggle navigation">
 				<span class="fa fa-bars"></span> Menu
 			</button>
-            <div class="order-lg-last d-flex flex-column flex-sm-row align-items-center">
-                <a href="#" class="btn btn-primary mb-2 mb-sm-0">Make an appointment</a>
-                <a href="login.html" class="btn btn-outline-light ml-sm-2 mb-2 mb-sm-0">Login</a>
-                <a href="signup.html" class="btn btn-outline-light ml-sm-2">Signup</a>
-            </div>
+			<div class="order-lg-last d-flex flex-column flex-sm-row align-items-center">
+				<a href="#" class="btn btn-primary mb-2 mb-sm-0">Make an appointment</a>
+				<a href="login.html" class="btn btn-outline-light ml-sm-2 mb-2 mb-sm-0">Login</a>
+				<a href="signup.html" class="btn btn-outline-light ml-sm-2">Signup</a>
+			</div>
 			<div class="collapse navbar-collapse" id="ftco-nav">
 				<ul class="navbar-nav mr-auto">
 					<li class="nav-item"><a href="index.html" class="nav-link">Home</a></li>
