--- a/doctors.html
+++ b/doctors.html
@@ -29,7 +29,7 @@
 		<div class="container">
 			<div class="row justify-content-between">
 				<div class="col-md-3 mb-md-0 mb-4 d-flex align-items-center">
-					<a class="navbar-brand" href="index.html">Chiropractic</a>
+					<a class="navbar-brand" href="index.html">Smart Care</a>
 				</div>
 				<div class="col-md-7">
 					<div class="row">
@@ -53,7 +53,8 @@
 			</div>
 		</div>
 	</div>
-	<nav class="navbar navbar-expand-lg navbar-dark ftco_navbar bg-dark ftco-navbar-light" id="ftco-navbar">
+	<nav class="navbar position-sticky navbar-expand-lg navbar-dark ftco_navbar bg-dark ftco-navbar-light"
+		id="ftco-navbar">
 		<div class="container">
 			<button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#ftco-nav"
 				aria-controls="ftco-nav" aria-expanded="false" aria-label="Toggle navigation">
