--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 
 <head>
-	<title>Chiropractic - Free Bootstrap 4 Template by Colorlib</title>
+	<title>Home</title>
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
@@ -30,7 +30,7 @@
 		<div class="container">
 			<div class="row justify-content-between">
 				<div class="col-md-3 mb-md-0 mb-4 d-flex align-items-center">
-					<a class="navbar-brand" href="index.html">Chiropractic</a>
+					<a class="navbar-brand" href="index.html">Smart Care</a>
 				</div>
 				<div class="col-md-7">
 					<div class="row">
@@ -54,7 +54,8 @@
 			</div>
 		</div>
 	</div>
-	<nav class="navbar navbar-expand-lg navbar-dark ftco_navbar bg-dark ftco-navbar-light" id="ftco-navbar">
+	<nav class="navbar position-sticky navbar-expand-lg navbar-dark ftco_navbar bg-dark ftco-navbar-light"
+		id="ftco-navbar">
 		<div class="container">
 			<button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#ftco-nav"
 				aria-controls="ftco-nav" aria-expanded="false" aria-label="Toggle navigation">
