--- a/signup.html
+++ b/signup.html
@@ -28,7 +28,7 @@
 		<div class="container">
 			<div class="row justify-content-between">
 				<div class="col-md-3 mb-md-0 mb-4 d-flex align-items-center">
-					<a class="navbar-brand" href="index.html">Chiropractic</a>
+					<a class="navbar-brand" href="index.html">Smart Care</a>
 				</div>
 				<div class="col-md-7">
 					<div class="row">
@@ -52,18 +52,19 @@
 			</div>
 		</div>
 	</div>
-	<nav class="navbar navbar-expand-lg navbar-dark ftco_navbar bg-dark ftco-navbar-light" id="ftco-navbar">
+	<nav class="navbar position-sticky navbar-expand-lg navbar-dark ftco_navbar bg-dark ftco-navbar-light"
+		id="ftco-navbar">
 		<div class="container">
 			<button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#ftco-nav"
 				aria-controls="ftco-nav" aria-expanded="false" aria-label="Toggle navigation">
 				<span class="fa fa-bars"></span> Menu
 			</button>
-            <div class="order-lg-last d-flex flex-column flex-sm-row align-items-center">
-                <a href="#" class="btn btn-primary mb-2 mb-sm-0">Make an appointment</a>
-                <a href="login.html" class="btn btn-outline-light ml-sm-2 mb-2 mb-sm-0">Login</a>
-                <a href="signup.html" class="btn btn-outline-light ml-sm-2 active">Signup</a>
-            </div>
-            
+			<div class="order-lg-last d-flex flex-column flex-sm-row align-items-center">
+				<a href="#" class="btn btn-primary mb-2 mb-sm-0">Make an appointment</a>
+				<a href="login.html" class="btn btn-outline-light ml-sm-2 mb-2 mb-sm-0">Login</a>
+				<a href="signup.html" class="btn btn-outline-light ml-sm-2 active">Signup</a>
+			</div>
+
 			<div class="collapse navbar-collapse" id="ftco-nav">
 				<ul class="navbar-nav mr-auto">
 					<li class="nav-item"><a href="index.html" class="nav-link">Home</a></li>
@@ -78,31 +79,31 @@
 	</nav>
 	<!-- END nav -->
 
-    <div class="container">
-        <div class="signup-container">
-            <h4 class="text-center">Patient Registration</h4>
-            <form id="signupForm">
-                <div class="form-group">
-                    <label>Full Name</label>
-                    <input type="text" id="name" class="form-control" required>
-                </div>
-                <div class="form-group">
-                    <label>Email Address</label>
-                    <input type="email" id="email" class="form-control" required>
-                </div>
-                <div class="form-group">
-                    <label>Phone Number</label>
-                    <input type="tel" id="phone" class="form-control" required>
-                </div>
-                <div class="form-group">
-                    <label>Password</label>
-                    <input type="password" id="password" class="form-control" required>
-                </div>
-                <button type="submit" class="btn btn-primary w-100">Register</button>
-            </form>
-            <p class="mt-3 text-center">Already have an account? <a href="login.html">Login</a></p>
-        </div>
-    </div>
+	<div class="container">
+		<div class="signup-container">
+			<h4 class="text-center">Patient Registration</h4>
+			<form id="signupForm">
+				<div class="form-group">
+					<label>Full Name</label>
+					<input type="text" id="name" class="form-control" required>
+				</div>
+				<div class="form-group">
+					<label>Email Address</label>
+					<input type="email" id="email" class="form-control" required>
+				</div>
+				<div class="form-group">
+					<label>Phone Number</label>
+					<input type="tel" id="phone" class="form-control" required>
+				</div>
+				<div class="form-group">
+					<label>Password</label>
+					<input type="password" id="password" class="form-control" required>
+				</div>
+				<button type="submit" class="btn btn-primary w-100">Register</button>
+			</form>
+			<p class="mt-3 text-center">Already have an account? <a href="login.html">Login</a></p>
+		</div>
+	</div>
 
 
 	<!-- loader -->
@@ -129,7 +130,7 @@
 	<script src="js/jquery.magnific-popup.min.js"></script>
 	<script src="js/scrollax.min.js"></script>
 	<script
-	src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBVWaKrjvy3MaE7SQ74_uJiULgl1JY0H2s&sensor=false"></script>
+		src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBVWaKrjvy3MaE7SQ74_uJiULgl1JY0H2s&sensor=false"></script>
 	<script src="js/google-map.js"></script>
 	<script src="js/main.js"></script>
 
