nav position updated

--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
 			</div>
 		</div>
 	</div>
-	<nav class="navbar position-sticky navbar-expand-lg navbar-dark ftco_navbar bg-dark ftco-navbar-light"
+	<nav class="navbar position-sticky fixed-top navbar-expand-lg navbar-dark ftco_navbar bg-dark ftco-navbar-light"
 		id="ftco-navbar">
 		<div class="container">
 			<button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#ftco-nav"
